# certica

./: .gitignore  CA_TOOL_QUICKSTART.md  CA_TOOL_QUICKSTART_cn.md  CA_TOOL_README.md  CHANGELOG.md  CONTRIBUTING.md  I18N_GUIDE.md  LICENSE  MANIFEST.in  Makefile  PROJECT_STRUCTURE.md  README.md  README_cn.md  STRUCTURE.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
certica/: __init__.py  ca_manager.py  cert_manager.py  cli.py  i18n.py  system_cert.py  system_check.py  template_manager.py  ui.py
certica/locales/: en.json  fr.json  ja.json  ko.json  ru.json  zh.json
docs/: Makefile
docs/source/: conf.py  index.rst  introduction.rst  introduction_cn.rst  quickstart.rst
docs/source/_static/: custom.css
docs/source/api_reference/: ca_manager.rst  cert_manager.rst  cli.rst  index.rst  template_manager.rst
docs/source/examples/: automation_example.rst  docker_example.rst  etcd_example.rst  index.rst  nginx_example.rst
docs/source/user_guide/: best_practices.rst  certificate_usage.rst  cli_reference.rst  index.rst  installation.rst  language_support.rst  python_api.rst  usage.rst
examples/: README.md
scripts/: README.md  generate_release_notes.py
tests/: README.md  __init__.py  conftest.py  test_ca_manager.py  test_ca_manager_cleanup.py  test_ca_manager_edge_cases.py  test_ca_manager_exceptions.py  test_ca_manager_line_134.py  test_cert_manager.py  test_cert_manager_cleanup.py  test_cert_manager_edge_cases.py  test_cert_manager_exceptions.py  test_cli.py  test_cli_check_only.py  test_cli_create_ca_template.py  test_cli_edge_cases.py  test_cli_exceptions.py  test_cli_format_path.py  test_cli_format_path_more.py  test_cli_main.py  test_cli_more_commands.py  test_cli_sign_template.py  test_cli_ui.py  test_cli_ui_more.py  test_i18n.py  test_i18n_edge_cases.py  test_i18n_more.py  test_integration.py  test_main.py  test_system_cert_basic.py  test_system_cert_key_functions.py  test_system_cert_methods.py  test_system_check.py  test_system_check_edge_cases.py  test_system_check_line_162.py  test_template_manager.py  test_template_manager_edge_cases.py
