[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "certica"
dynamic = ["version"]
description = "A user-friendly CA certificate generation tool for local development and testing with multi-language support"
readme = "README.md"
requires-python = ">=3.8,<3.15"
license = {text = "MIT"}
authors = [
    {name = "Metarigin", email = "dev@metarigin.com"}
]
keywords = ["ca", "certificate", "ssl", "tls", "openssl", "development", "testing", "i18n", "multilanguage"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "click>=7.0.0",
    "rich>=10.0.0",
    "questionary>=1.10.0",
]

[project.optional-dependencies]
docs = [
    "sphinx>=5.0.0,<9.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "furo>=2024.1.0",
    "sphinx-autodoc-typehints>=1.19.0",
    "sphinx-copybutton>=0.5.0",
    "sphinx-design>=0.5.0",
]

[project.scripts]
certica = "certica.cli:main"

[project.urls]
Homepage = "https://github.com/metarigin/certica"
Documentation = "https://github.com/metarigin/certica/blob/main/README.md"
Repository = "https://github.com/metarigin/certica"
Issues = "https://github.com/metarigin/certica/issues"

[tool.setuptools.packages.find]
exclude = [
    "tests*",
    "examples*",
    "docs*",
    "*.tests*",
]

[tool.setuptools.dynamic]
version = {attr = "certica.__version__"}

[tool.setuptools.package-data]
certica = ["py.typed", "locales/*.json"]

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["certica"]
omit = ["*/tests/*", "*/test_*.py", "certica/ui.py", "certica/system_cert.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]


[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=0.991",
    "build>=0.10.0",
]
docs = [
    "sphinx>=5.0.0,<9.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "furo>=2024.1.0",
    "sphinx-autodoc-typehints>=1.19.0",
    "sphinx-copybutton>=0.5.0",
    "sphinx-design>=0.5.0",
]
